# pipeline.rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md
macro/: Cargo.toml
macro/src/: lib.rs  pipeline.rs
src/: lib.rs
tests/: test.rs
