[package]
name = "pipeline"
version = "0.5.0"
authors = ["Johann Hofmann <mail@johann-hofmann.com>"]
description = "A macro collection to pipe |> your functions calls, like in F# or Elixir."
repository = "https://github.com/johannhof/pipeline.rs"
readme = "README.md"
keywords = ["pipe", "function", "elixir", "macro", "composition"]
license = "MIT"
